WebUi: Beauty Tweaks (Instance, 3rd party Licenses) (#597)
* WebUi: Instance Management Tweaks and Chars Needed Information

* WebUi: 3rd Party Licenses Tweaks

* WebUi: Apply changes from Brindosch PR #596

* WebUi: Changing i18n tokens and adding catch event for connection error

* WebUi: Adding Link to GitHub License Ressource if an error is catched

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -45,6 +45,7 @@
 	"general_btn_next": "Weiter",
 	"general_btn_back": "Zurück",
 	"general_btn_iswitch": "Switch",
+	"general_chars_needed": "weitere Zeichen benötigt",
 	"general_wiki_moreto": "Mehr Informationen zu \"$1\" findest du in unserem Wiki",
 	"dashboard_label_intro": "Das Dashboard zeigt dir Informationen zum Systemstatus, ob Updates verfügbar sind, den Komponentenstatus sowie die letzten Blog-Posts vom Hyperion Team.",
 	"dashboard_infobox_label_title": "Information",
@@ -191,7 +192,6 @@
 	"conf_network_tok_desc" : "Tokens erlauben andere Anwendungen auf die Hyperion API zuzugreifen. Eine Anwendung kann ein Token anfordern welches von dir bestätigt werden muss oder du erstellst dir selbst ein neues Token. Diese Tokens werden nur benötigt, wenn \"API Autorisierung\" in den Netzwerkeinstellungen aktiviert ist.",
 	"conf_network_tok_cidhead" : "Beschreibung",
 	"conf_network_tok_lastuse" : "Zuletzt genutzt",
-	"conf_network_tok_chars_needed" : "weitere Zeichen benötigt",
 	"conf_network_tok_comment_title" : "Token Beschreibung",
 	"conf_network_createToken_btn" : "Erstelle Token",
 	"conf_network_tok_diaTitle" : "Neues Token erstellt!",
@@ -289,6 +289,7 @@
 	"about_contribute": "Entwickel Hyperion mit uns weiter!",
 	"about_credits": "Einen Dank an alle Entwickler!",
 	"about_3rd_party_licenses": "Drittanbieter Lizenzen",
+	"about_3rd_party_licenses_error": "Wir hatten Probleme beim Laden der Drittanbieter Lizenzen aus dem Internet. <br />Klicke hier um die Datei auf GitHub aufzurufen.",
 	"info_conlost_label_title": "Verbindung zum Hyperion Service unterbrochen!",
 	"info_conlost_label_reason": "Mögliche Ursachen:",
 	"info_conlost_label_reason1": "- Schlechte WLAN Verbindung",
