--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -44,6 +44,7 @@
 	"general_btn_next" : "Next",
 	"general_btn_back" : "Back",
 	"general_btn_iswitch" : "Switch",
+	"general_chars_needed": "more characters needed",
 	"general_wiki_moreto" : "More informations to \"$1\" at our Wiki",
 	"dashboard_label_intro" : "The dashboard give you a quick overview about the status of Hyperion and show you the latest news of the Hyperion Blog.",
 	"dashboard_infobox_label_title" : "Information",
@@ -191,7 +192,6 @@
 	"conf_network_tok_cidhead" : "Description",
 	"conf_network_tok_lastuse" : "Last use",
 	"conf_network_tok_comment_title" : "Token description",
-	"conf_network_tok_chars_needed" : "more characters needed",
 	"conf_network_createToken_btn" : "Create Token",
 	"conf_network_tok_diaTitle" : "New Token created!",
 	"conf_network_tok_diaMsg" : "Here is your new token which can be used to grant an application access to the Hyperion API. For security reasons you can't view it again so use/note it now.",
@@ -287,7 +287,8 @@
 	"about_resources" : "$1 libraries",
 	"about_contribute" : "Develop Hyperion further with us!",
 	"about_credits" : "Credits to all these developers!",
-	"about_3rd_party_licenses": "View 3rd party licenses",
+	"about_3rd_party_licenses": "3rd party licenses",
+	"about_3rd_party_licenses_error": "We had trouble collecting 3rd party licenses information from web. <br />Please follow this link to the GitHub Resource.",
 	"info_conlost_label_title" : "Lost connection to Hyperion service!",
 	"info_conlost_label_reason" : "Possible reasons:",
 	"info_conlost_label_reason1" : "- Bad WLAN connection",
