--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -621,6 +621,14 @@
 	"edt_conf_webc_heading_title": "Web Konfiguration",
 	"edt_conf_webc_docroot_title": "Verzeichnis",
 	"edt_conf_webc_docroot_expl": "Lokaler Pfad zum WebUI Wurzelverzeichnis (Nur für WebUI Entwickler)",
+	"edt_conf_webc_sslport_title" : "HTTPS Port",
+	"edt_conf_webc_sslport_expl" : "Port des HTTPS webservers",
+	"edt_conf_webc_crtPath_title" : "Zertifikats-Pfad",
+	"edt_conf_webc_crtPath_expl" : "Pfad zur Zertifikats-Datei (Format sollte PEM sein)",
+	"edt_conf_webc_keyPath_title" : "Schlüssel-Pfad",
+	"edt_conf_webc_keyPath_expl" : "Pfad zum privaten Schlüssel (Format in PEM, verschlüsselt mit RSA)",
+	"edt_conf_webc_keyPassPhrase_title" : "Schlüsselpasswort",
+	"edt_conf_webc_keyPassPhrase_expl" : "Optional: Der Schlüssel könnte mit einem Passwort geschützt sein",
 	"edt_conf_effp_heading_title": "Effekt Pfade",
 	"edt_conf_effp_paths_title": "Effekt Pfad(e)",
 	"edt_conf_effp_paths_expl": "Es können mehrere Ordner definiert werden die Effekte enthalten. Der Effekt Konfigurator speichert immer im Ersten Ordner.",
