--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -620,6 +620,14 @@
 	"edt_conf_webc_heading_title" : "Web Configuration",
 	"edt_conf_webc_docroot_title" : "Document Root",
 	"edt_conf_webc_docroot_expl" : "Local webinterface root path (just for webui developer)",
+	"edt_conf_webc_sslport_title" : "HTTPS Port",
+	"edt_conf_webc_sslport_expl" : "Port oft the HTTPS webserver",
+	"edt_conf_webc_crtPath_title" : "Certificate path",
+	"edt_conf_webc_crtPath_expl" : "Path to the certification file (format should be PEM)",
+	"edt_conf_webc_keyPath_title" : "Private key path",
+	"edt_conf_webc_keyPath_expl" : "Path to the key file (format PEM, encrypted with RSA)",
+	"edt_conf_webc_keyPassPhrase_title" : "Key password",
+	"edt_conf_webc_keyPassPhrase_expl" : "Optional: The key might be protected with a password",
 	"edt_conf_effp_heading_title" : "Effect Paths",
 	"edt_conf_effp_paths_title" : "Effect Path(s)",
 	"edt_conf_effp_paths_expl" : "You could define more folders that contain effects. The effect configurator will always save inside the first folder.",
