changed proto title in forwarder to flatbuffer
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/assets/webconfig/i18n/cs.json
+++ b/assets/webconfig/i18n/cs.json
@@ -510,9 +510,9 @@
     "edt_conf_fw_json_title": "Seznam klientů json",
     "edt_conf_fw_json_expl": "Jeden z cílů na jeden řádek. Obsahuje IP:PORT (Příklad: 127.0.0.1:19446)",
     "edt_conf_fw_json_itemtitle": "Json cíl",
-    "edt_conf_fw_proto_title": "Seznam proto klientů",
-    "edt_conf_fw_proto_expl": "Jeden cíl na každý řádek. Obsahuje IP:PORT (Příklad: 127.0.0.1:19401)",
-    "edt_conf_fw_proto_itemtitle": "Proto cíl",
+    "edt_conf_fw_flat_title": "Seznam flatbuffer klientů",
+    "edt_conf_fw_flat_expl": "Jeden cíl na každý řádek. Obsahuje IP:PORT (Příklad: 127.0.0.1:19401)",
+    "edt_conf_fw_flat_itemtitle": "flatbuffer cíl",
     "edt_conf_js_heading_title": "JSON Server",
     "edt_conf_ps_heading_title": "PROTO Server",
     "edt_conf_bobls_heading_title": "Boblight Server",
