--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -599,9 +599,9 @@
 	"edt_conf_fw_json_title": "Liste von Json zielen",
 	"edt_conf_fw_json_expl": "Ein Json Ziel pro Zeile. Bestehend aus IP:PORT (Beispiel: 127.0.0.1:19446)",
 	"edt_conf_fw_json_itemtitle": "Json Ziel",
-	"edt_conf_fw_proto_title": "Liste von Proto zielen",
-	"edt_conf_fw_proto_expl": "Ein Proto Ziel pro Zeile. Bestehend aus IP:PORT (Beispiel: 127.0.0.1:19401)",
-	"edt_conf_fw_proto_itemtitle": "Proto Ziel",
+	"edt_conf_fw_flat_title": "Liste von Flatbuffer zielen",
+	"edt_conf_fw_flat_expl": "Ein Flatbuffer Ziel pro Zeile. Bestehend aus IP:PORT (Beispiel: 127.0.0.1:19401)",
+	"edt_conf_fw_flat_itemtitle": "Flatbuffer Ziel",
 	"edt_conf_net_heading_title" : "Network",
 	"edt_conf_net_internetAccessAPI_title":"Internet API Zugriff",
 	"edt_conf_net_internetAccessAPI_expl":"Erlaube Zugriff auf die Hyperion API/Webinterface aus dem Internet, deaktivieren für höhere Sicherheit.",
