--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -598,9 +598,9 @@
 	"edt_conf_fw_json_title" : "List of json clients",
 	"edt_conf_fw_json_expl" : "One json target per line. Contains IP:PORT (Example: 127.0.0.1:19446)",
 	"edt_conf_fw_json_itemtitle" : "Json target",
-	"edt_conf_fw_proto_title" : "List of proto clients",
-	"edt_conf_fw_proto_expl" : "One proto target per line. Contains IP:PORT (Example: 127.0.0.1:19401)",
-	"edt_conf_fw_proto_itemtitle" : "Proto target",
+	"edt_conf_fw_flat_title" : "List of flatbuffer clients",
+	"edt_conf_fw_flat_expl" : "One flatbuffer target per line. Contains IP:PORT (Example: 127.0.0.1:19401)",
+	"edt_conf_fw_flat_itemtitle" : "flatbuffer target",
 	"edt_conf_net_heading_title" : "Network",
 	"edt_conf_net_internetAccessAPI_title":"Internet API Access",
 	"edt_conf_net_internetAccessAPI_expl":"Allow access to the Hyperion API/Webinterface from the internet, disable for higher security.",
