--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -510,9 +510,9 @@
     "edt_conf_fw_json_title": "Lista de clientes JSON",
     "edt_conf_fw_json_expl": "Un destino json por línea. Contiene IP:PUERTO (Ejemplo: 127.0.0.1:19446)",
     "edt_conf_fw_json_itemtitle": "Destino json",
-    "edt_conf_fw_proto_title": "Lista de clientes proto",
-    "edt_conf_fw_proto_expl": "Un destino proto por línea. Contiene IP:PUERTO (Ejemplo: 127.0.0.1:19446)",
-    "edt_conf_fw_proto_itemtitle": "Destino proto",
+    "edt_conf_fw_flat_title": "Lista de clientes flatbuffer",
+    "edt_conf_fw_flat_expl": "Un destino flatbuffer por línea. Contiene IP:PUERTO (Ejemplo: 127.0.0.1:19446)",
+    "edt_conf_fw_flat_itemtitle": "Destino flatbuffer",
     "edt_conf_js_heading_title": "Servidor JSON",
     "edt_conf_ps_heading_title": "Servidor PROTO",
     "edt_conf_bobls_heading_title": "Servidor Boblight",
