--- a/assets/webconfig/i18n/it.json
+++ b/assets/webconfig/i18n/it.json
@@ -510,9 +510,9 @@
     "edt_conf_fw_json_title": "Lista dei client json",
     "edt_conf_fw_json_expl": "Una destinazione json per riga. Contiene IP:PORTA:(Esempio: 127.0.0.1:19446)",
     "edt_conf_fw_json_itemtitle": "Destinatario json",
-    "edt_conf_fw_proto_title": "Lista dei client proto",
-    "edt_conf_fw_proto_expl": "Una destinazione proto per riga. Contiene IP:PORTA:(Esempio: 127.0.0.1:19401)",
-    "edt_conf_fw_proto_itemtitle": "Destinatario proto",
+    "edt_conf_fw_flat_title": "Lista dei client flatbuffer",
+    "edt_conf_fw_flat_expl": "Una destinazione flatbuffer per riga. Contiene IP:PORTA:(Esempio: 127.0.0.1:19401)",
+    "edt_conf_fw_flat_itemtitle": "Destinatario flatbuffer",
     "edt_conf_js_heading_title": "Server JSON",
     "edt_conf_ps_heading_title": "Server PROTO",
     "edt_conf_bobls_heading_title": "Srtver Boblight",
