WebUi PW Support (#9)
* Initial WebUi Password Support

* Small changes

* Initial WebUi Password Support

* Small changes

* Basic WebUi Token support

* added "removeStorage", added uiLock, updated login page

* Small improvments

* Small change

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -75,6 +75,8 @@
 	"dashboard_alert_message_confsave_success" : "Your Hyperion configuration has been saved successfully. Your changes are now active.",
 	"dashboard_message_global_setting_t": "Instance independent setting",
 	"dashboard_message_global_setting": "The settings on this page are not depending on a specific instance. Changes will be stored globally for all instances.",
+	"dashboard_message_default_password_t": "WebUi default password is set",
+	"dashboard_message_default_password": "The default password for the WebUi is set. We strongly recommend to change this.",
 	"dashboard_active_instance": "Selected instance",
 	"main_menu_dashboard_token" : "Dashboard",
 	"main_menu_configuration_token" : "Configuration",
@@ -313,6 +315,8 @@
 	"InfoDialog_lang_title" : "Language setting",
 	"InfoDialog_lang_text" : "If you don't like the result of the automatic language detection you could overwrite it here.",
 	"InfoDialog_access_title" : "Settings level",
+	"InfoDialog_changePassword_title" : "Change Password",
+	"InfoDialog_changePassword_success" : "Password successfully saved!",
 	"InfoDialog_access_text" : "Depending on settings level you could adjust more options or get access to more features. Recommended is the \"Default\" level.",
 	"InfoDialog_nowrite_title" : "write permission error!",
 	"InfoDialog_nowrite_text" : "Hyperion can't write to your current loaded configuration file. Please repair the file permissions to proceed.",
