--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -76,6 +76,8 @@
 	"dashboard_alert_message_confsave_success" : "Deine Hyperion Konfiguration wurde erfolgreich gespeichert. Deine Änderungen sind somit übernommen.",
 	"dashboard_message_global_setting_t": "Instanzunabhängige Einstellung",
 	"dashboard_message_global_setting": "Die Einstellungen auf dieser Seite sind instanzunabhängig. Änderungen werden global übernommen.",
+	"dashboard_message_default_password_t": "WebUi Standardpasswort gesetzt",
+	"dashboard_message_default_password": "Das Standardpasswort der WebUi ist gesetzt. Wir empfehlen dringend, dieses zu ändern.",
 	"dashboard_active_instance": "Ausgewählte Instanz",
 	"main_menu_dashboard_token": "Dashboard",
 	"main_menu_configuration_token": "Konfiguration",
@@ -313,6 +315,8 @@
 	"infoDialog_effconf_created_text": "Der Effekt \"$1\" wurde erfolgreich erstellt!",
 	"InfoDialog_lang_title": "Spracheinstellung",
 	"InfoDialog_lang_text": "Sollte dir die Vorauswahl der automatischen Spracherkennung nicht gefallen, kannst du die Sprache hier manuell festlegen.",
+	"InfoDialog_changePassword_title" : "Change Password",
+	"InfoDialog_changePassword_success" : "Passwort erfolgreich gespeichert!",
 	"InfoDialog_access_title": "Einstellungsstufe",
 	"InfoDialog_access_text": "Je höher die Stufe je mehr Einstellungen und Funktionen stehen zur Verfügung. Empfohlen ist \"Standard\".",
 	"InfoDialog_nowrite_title": "Fehler beim Schreibzugriff!",
