--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -614,7 +614,9 @@
 	"edt_conf_net_apiAuth_title":"API Authentication",
 	"edt_conf_net_apiAuth_expl":"Enforce all applications that use the Hyperion API to authenticate themself against Hyperion (Exception see \"Local API Authentication\"). Higher security, as you control the access and revoke it at any time.",
 	"edt_conf_net_localApiAuth_title" : "Local API Authentication",
-	"edt_conf_net_localApiAuth_expl" : "When enabled, connections from your home network needs to authenticate themself against Hyperion too.",
+	"edt_conf_net_localApiAuth_expl" : "When enabled, connections from your home network needs to authenticate themself against Hyperion with a token.",
+	"edt_conf_net_localAdminAuth_title":"Local Admin API Authentication",
+	"edt_conf_net_localAdminAuth_expl":"When enabled, administration access from your home network needs a password.",
 	"edt_conf_net_restirctedInternetAccessAPI_title" : "Restrict to IP's",
 	"edt_conf_net_restirctedInternetAccessAPI_expl": "You can restrict the access to the API through the internet to certain IP's.",
 	"edt_conf_js_heading_title" : "JSON Server",
