--- a/assets/webconfig/i18n/cs.json
+++ b/assets/webconfig/i18n/cs.json
@@ -633,6 +633,7 @@
     "wiz_hue_ident": "Identifikovat",
     "edt_dev_spec_ledType_title": "Typ LED",
     "edt_dev_spec_dmaNumber_title": "Kanál DMA",
+    "edt_dev_spec_pwmChannel_title": "Kanál PWM",
     "effectsconfigurator_editdeleff": "Smazat / načíst efekt",
     "effectsconfigurator_button_editeffect": "Efekt načíst",
     "edt_conf_v4l2_sDVOffsetMin_title": "Detekce signálu VMin",
