--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -429,6 +429,7 @@
 	"edt_dev_spec_maximumLedCount_title": "Maximale Anzahl LEDs",
 	"edt_dev_spec_gpioNumber_title": "GPIO Nummer",
 	"edt_dev_spec_dmaNumber_title": "DMA Kanal",
+	"edt_dev_spec_pwmChannel_title": "PWM Kanal",
 	"edt_dev_spec_gpioMap_title": "GPIO Zuweisung",
 	"edt_dev_spec_PBFiFo_title": "Pi-Blaster FiFo",
 	"edt_dev_spec_gpioBcm_title": "GPIO Pin",
