--- a/assets/webconfig/i18n/it.json
+++ b/assets/webconfig/i18n/it.json
@@ -633,6 +633,7 @@
     "wiz_hue_ident": "Identifica",
     "edt_dev_spec_ledType_title": "Tipo LED",
     "edt_dev_spec_dmaNumber_title": "Canale DMA",
+    "edt_dev_spec_pwmChannel_title": "Canale PWM",
     "effectsconfigurator_editdeleff": "Cancella/Carica Effetto",
     "effectsconfigurator_button_editeffect": "Carica Effetto",
     "edt_conf_v4l2_sDVOffsetMin_title": "Min Vert. Riconoscimento Segnale",
