--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -76,6 +76,8 @@
 	"dashboard_alert_message_confsave_success" : "Deine Hyperion Konfiguration wurde erfolgreich gespeichert. Deine Änderungen sind somit übernommen.",
 	"dashboard_message_global_setting_t": "Instanzunabhängige Einstellung",
 	"dashboard_message_global_setting": "Die Einstellungen auf dieser Seite sind instanzunabhängig. Änderungen werden global übernommen.",
+	"dashboard_message_default_password_t": "WebUi Standardpasswort gesetzt",
+	"dashboard_message_default_password": "Das Standardpasswort der WebUi ist gesetzt. Wir empfehlen dringend, dieses zu ändern.",
 	"dashboard_active_instance": "Ausgewählte Instanz",
 	"main_menu_dashboard_token": "Dashboard",
 	"main_menu_configuration_token": "Konfiguration",
@@ -312,6 +314,8 @@
 	"infoDialog_effconf_created_text": "Der Effekt \"$1\" wurde erfolgreich erstellt!",
 	"InfoDialog_lang_title": "Spracheinstellung",
 	"InfoDialog_lang_text": "Sollte dir die Vorauswahl der automatischen Spracherkennung nicht gefallen, kannst du die Sprache hier manuell festlegen.",
+	"InfoDialog_changePassword_title" : "Ändere Passwort",
+	"InfoDialog_changePassword_success" : "Passwort erfolgreich gespeichert!",
 	"InfoDialog_access_title": "Einstellungsstufe",
 	"InfoDialog_access_text": "Je höher die Stufe je mehr Einstellungen und Funktionen stehen zur Verfügung. Empfohlen ist \"Standard\".",
 	"InfoDialog_nowrite_title": "Fehler beim Schreibzugriff!",
@@ -612,6 +616,8 @@
 	"edt_conf_net_apiAuth_expl":"Zwinge alle Anwendungen welche die Hyperion API nutzen sich zu authentifizieren. Aktivieren für höhere Sicherheit, da nun jede neue Anwendung einmalig von dir bestätigt werden muss.",
 	"edt_conf_net_localApiAuth_title" : "Lokale API Authentifizierung",
 	"edt_conf_net_localApiAuth_expl" : "Wenn aktiviert, müssen Verbindungen aus dem Heimnetzwerk mit einem Token authentifiziert werden.",
+	"edt_conf_net_localAdminAuth_title":"Lokale Admin Authentifizierung",
+	"edt_conf_net_localAdminAuth_expl":"Wenn aktiviert, muss der Administrationszugriff aus dem Heimnetzwerk mit einem Passwort authentifiziert werden.",
 	"edt_conf_net_restirctedInternetAccessAPI_title" : "Auf IP's beschränken",
 	"edt_conf_net_restirctedInternetAccessAPI_expl": "Den Zugriff auf die API durch das Internet auf bestimmte IP's beschränken",
 	"edt_conf_js_heading_title": "JSON Server",
