--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -75,6 +75,8 @@
 	"dashboard_alert_message_confsave_success" : "Your Hyperion configuration has been saved successfully. Your changes are now active.",
 	"dashboard_message_global_setting_t": "Instance independent setting",
 	"dashboard_message_global_setting": "The settings on this page are not depending on a specific instance. Changes will be stored globally for all instances.",
+	"dashboard_message_default_password_t": "WebUi default password is set",
+	"dashboard_message_default_password": "The default password for the WebUi is set. We strongly recommend to change this.",
 	"dashboard_active_instance": "Selected instance",
 	"main_menu_dashboard_token" : "Dashboard",
 	"main_menu_configuration_token" : "Configuration",
@@ -312,6 +314,8 @@
 	"InfoDialog_lang_title" : "Language setting",
 	"InfoDialog_lang_text" : "If you don't like the result of the automatic language detection you could overwrite it here.",
 	"InfoDialog_access_title" : "Settings level",
+	"InfoDialog_changePassword_title" : "Change Password",
+	"InfoDialog_changePassword_success" : "Password successfully saved!",
 	"InfoDialog_access_text" : "Depending on settings level you could adjust more options or get access to more features. Recommended is the \"Default\" level.",
 	"InfoDialog_nowrite_title" : "write permission error!",
 	"InfoDialog_nowrite_text" : "Hyperion can't write to your current loaded configuration file. Please repair the file permissions to proceed.",
@@ -610,7 +614,9 @@
 	"edt_conf_net_apiAuth_title":"API Authentication",
 	"edt_conf_net_apiAuth_expl":"Enforce all applications that use the Hyperion API to authenticate themself against Hyperion (Exception see \"Local API Authentication\"). Higher security, as you control the access and revoke it at any time.",
 	"edt_conf_net_localApiAuth_title" : "Local API Authentication",
-	"edt_conf_net_localApiAuth_expl" : "When enabled, connections from your home network needs to authenticate themself against Hyperion too.",
+	"edt_conf_net_localApiAuth_expl" : "When enabled, connections from your home network needs to authenticate themself against Hyperion with a token.",
+	"edt_conf_net_localAdminAuth_title":"Local Admin API Authentication",
+	"edt_conf_net_localAdminAuth_expl":"When enabled, administration access from your home network needs a password.",
 	"edt_conf_net_restirctedInternetAccessAPI_title" : "Restrict to IP's",
 	"edt_conf_net_restirctedInternetAccessAPI_expl": "You can restrict the access to the API through the internet to certain IP's.",
 	"edt_conf_js_heading_title" : "JSON Server",
