--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -31,11 +31,11 @@
 	"general_btn_yes": "Ja",
 	"general_btn_ok": "OK",
 	"general_btn_cancel": "Abbrechen",
-	"general_btn_start" : "Start",
-	"general_btn_stop" : "Stop",
+	"general_btn_start": "Start",
+	"general_btn_stop": "Stop",
 	"general_btn_continue": "Fortfahren",
-	"general_btn_delete" : "Löschen",
-	"general_btn_rename" : "Umbenennen",
+	"general_btn_delete": "Löschen",
+	"general_btn_rename": "Umbenennen",
 	"general_btn_save": "Speichern",
 	"general_btn_saverestart": "Speichern und neustarten",
 	"general_btn_saveandreload": "Speichern und neu laden",
@@ -72,10 +72,10 @@
 	"dashboard_newsbox_readmore": "Weiterlesen",
 	"dashboard_alert_message_confedit_t": "Konfiguration geändert",
 	"dashboard_alert_message_confedit": "Deine Hyperion Konfiguration wurde verändert. Um die Änderungen anzuwenden, starte Hyperion neu.",
-	"dashboard_alert_message_disabled_t" : "LED Hardware instanz deaktiviert",
-	"dashboard_alert_message_disabled" : "Diese Instanz ist momentan deaktiviert! Um sie zu nutzen, musst du sie zuerst wieder im Dashboard aktivieren.",
-	"dashboard_alert_message_confsave_success_t" : "Konfiguration gespeichert",
-	"dashboard_alert_message_confsave_success" : "Deine Hyperion Konfiguration wurde erfolgreich gespeichert. Deine Änderungen sind somit übernommen.",
+	"dashboard_alert_message_disabled_t": "LED Hardware instanz deaktiviert",
+	"dashboard_alert_message_disabled": "Diese Instanz ist momentan deaktiviert! Um sie zu nutzen, musst du sie zuerst wieder im Dashboard aktivieren.",
+	"dashboard_alert_message_confsave_success_t": "Konfiguration gespeichert",
+	"dashboard_alert_message_confsave_success": "Deine Hyperion Konfiguration wurde erfolgreich gespeichert. Deine Änderungen sind somit übernommen.",
 	"dashboard_message_global_setting_t": "Instanzunabhängige Einstellung",
 	"dashboard_message_global_setting": "Die Einstellungen auf dieser Seite sind instanzunabhängig. Änderungen werden global übernommen.",
 	"dashboard_message_default_password_t": "WebUi Standardpasswort gesetzt",
@@ -110,15 +110,15 @@
 	"conf_general_impexp_l2": "Exportiere eine Konfiguration, indem du auf \"Exportieren\" klickst. Dein Browser startet einen Download.",
 	"conf_general_impexp_impbtn": "Importieren",
 	"conf_general_impexp_expbtn": "Exportieren",
-	"conf_general_inst_title" : "LED Hardware Instanzverwaltung",
-	"conf_general_inst_desc" : "Verwende mehrere LED Hardware gleichzeitig. Jede Instanz läuft unabhängig voneinander, wodurch unterschiedliche LED-Layouts und Kalibrierungseinstellungen möglich sind. Laufende Instanzen sind in der oberen Symbolleiste verfügbar.",
-	"conf_general_inst_namehead" : "Instanzname",
-	"conf_general_inst_actionhead" : "Aktionen",
-	"conf_general_inst_name_title" : "Neuer Instanzname",
-	"conf_general_createInst_btn" : "Instanz erstellen",
-	"conf_general_inst_renreq_t" : "Gib in das untere Feld deinen neuen Instanznamen ein.",
-	"conf_general_inst_delreq_h" : "LED Hardware Instanz löschen",
-	"conf_general_inst_delreq_t" : "Bist du Dir sicher, das du die Instanz \"$1\" löschen möchtest? Alle Einstellungen zu dieser Instanz gehen verloren.",
+	"conf_general_inst_title": "LED Hardware Instanzverwaltung",
+	"conf_general_inst_desc": "Verwende mehrere LED Hardware gleichzeitig. Jede Instanz läuft unabhängig voneinander, wodurch unterschiedliche LED-Layouts und Kalibrierungseinstellungen möglich sind. Laufende Instanzen sind in der oberen Symbolleiste verfügbar.",
+	"conf_general_inst_namehead": "Instanzname",
+	"conf_general_inst_actionhead": "Aktionen",
+	"conf_general_inst_name_title": "Neuer Instanzname",
+	"conf_general_createInst_btn": "Instanz erstellen",
+	"conf_general_inst_renreq_t": "Gib in das untere Feld deinen neuen Instanznamen ein.",
+	"conf_general_inst_delreq_h": "LED Hardware Instanz löschen",
+	"conf_general_inst_delreq_t": "Bist du Dir sicher, das du die Instanz \"$1\" löschen möchtest? Alle Einstellungen zu dieser Instanz gehen verloren.",
 	"conf_helptable_option": "Option",
 	"conf_helptable_expl": "Erklärung",
 	"conf_effect_path_intro": "Hier kannst du Ordner angeben, die beim Laden von Effekten berücksichtig werden sollen. Zusätzlich können Effekte anhand ihres Namens deaktiviert werden um sie aus Listen zu löschen.",
@@ -186,21 +186,21 @@
 	"conf_colors_color_intro": "Erstelle Kalibrierungsprofile die einzelnen Komponenten zugewisen werden können. Passe dabei Farben, Gamma, Helligkeit, Kompensation und mehr an.",
 	"conf_colors_smoothing_intro": "Glätte den Farbverlauf und Helligkeitsänderungen um nicht von schnellen Übergängen abgelenkt zu werden.",
 	"conf_colors_blackborder_intro": "Ignoriere schwarze Balken, jeder Modus nutzt einen anderen Algorithmus um diese zu erkennen. Erhöhe die Schwelle, sollte es nicht funktionieren.",
-	"conf_network_net_intro" : "Einstellungen zum Netzwerk die für alle Netzwerk-Dienste gelten",
+	"conf_network_net_intro": "Einstellungen zum Netzwerk die für alle Netzwerk-Dienste gelten",
 	"conf_network_json_intro": "Der JSON-RPC-Port aller Hyperion-Instanzen, wird genutzt zur Fernsteuerung.",
 	"conf_network_bobl_intro": "Boblight Empfänger",
 	"conf_network_fbs_intro": "Google Flatbuffers Empfänger. Wird genutzt für schnellen Bildempfang.",
 	"conf_network_proto_intro": "Der PROTO-Port aller Hyperion-Instanzen, wird genutzt für \"Bildstreams\" (HyperionScreenCap, Kodi Addon, Android Hyperion Grabber, ...)",
 	"conf_network_forw_intro": "Leite alles an eine zweite Hyperion Instanz weiter, diese kann dann mit einer anderen LED Steuerung genutzt werden",
-	"conf_network_tok_title" : "Token Management",
-	"conf_network_tok_desc" : "Tokens erlauben andere Anwendungen auf die Hyperion API zuzugreifen. Eine Anwendung kann ein Token anfordern welches von dir bestätigt werden muss oder du erstellst dir selbst ein neues Token. Diese Tokens werden nur benötigt, wenn \"API Autorisierung\" in den Netzwerkeinstellungen aktiviert ist.",
-	"conf_network_tok_cidhead" : "Beschreibung",
-	"conf_network_tok_lastuse" : "Zuletzt genutzt",
-	"conf_network_tok_comment_title" : "Token Beschreibung",
-	"conf_network_createToken_btn" : "Erstelle Token",
-	"conf_network_tok_diaTitle" : "Neues Token erstellt!",
-	"conf_network_tok_diaMsg" : "Hier ist dein neues Token, welches für den Zugriff auf die Hyperion API verwendet werden kann. Aus Sicherheitsgründen können Tokens nach der Erstellung nur einmalig eingesehen werden, notiere es dir daher jetzt.",
-	"conf_network_tok_intro" : "Hier kannst du Token zur API Authentifizierung erstellen oder löschen. Neu erstellte Token werden einmalig angezeigt.",
+	"conf_network_tok_title": "Token Management",
+	"conf_network_tok_desc": "Tokens erlauben andere Anwendungen auf die Hyperion API zuzugreifen. Eine Anwendung kann ein Token anfordern welches von dir bestätigt werden muss oder du erstellst dir selbst ein neues Token. Diese Tokens werden nur benötigt, wenn \"API Autorisierung\" in den Netzwerkeinstellungen aktiviert ist.",
+	"conf_network_tok_cidhead": "Beschreibung",
+	"conf_network_tok_lastuse": "Zuletzt genutzt",
+	"conf_network_tok_comment_title": "Token Beschreibung",
+	"conf_network_createToken_btn": "Erstelle Token",
+	"conf_network_tok_diaTitle": "Neues Token erstellt!",
+	"conf_network_tok_diaMsg": "Hier ist dein neues Token, welches für den Zugriff auf die Hyperion API verwendet werden kann. Aus Sicherheitsgründen können Tokens nach der Erstellung nur einmalig eingesehen werden, notiere es dir daher jetzt.",
+	"conf_network_tok_intro": "Hier kannst du Token zur API Authentifizierung erstellen oder löschen. Neu erstellte Token werden einmalig angezeigt.",
 	"conf_network_tok_grantT": "App Token angefordert",
 	"conf_network_tok_grantMsg": "Eine App fordert Zugriff auf die Hyperion API durch ein Token. Möchtest du dies zulassen? Bitte überprüfe die angegebenen Informationen!",
 	"conf_logging_label_intro": "Überprüfe die Meldungen im Prokotoll um zu erfahren was Hyperion gerade beschäftigt. Je nach eingestellter Protokoll-Stufe siehst du mehr oder weniger Informationen.",
@@ -221,7 +221,7 @@
 	"remote_color_button_reset": "Farbe/Effekt zurücksetzen",
 	"remote_color_label_color": "Farbe:",
 	"remote_effects_label_effects": "Effekt:",
-	"remote_effects_label_picture" : "Bild:",
+	"remote_effects_label_picture": "Bild:",
 	"remote_adjustment_label": "Farbanpassung",
 	"remote_adjustment_intro": "Verändere live Farbe/Helligkeit/Kompensation. $1",
 	"remote_videoMode_label": "Video Modus",
@@ -318,8 +318,8 @@
 	"infoDialog_effconf_created_text": "Der Effekt \"$1\" wurde erfolgreich erstellt!",
 	"InfoDialog_lang_title": "Spracheinstellung",
 	"InfoDialog_lang_text": "Sollte dir die Vorauswahl der automatischen Spracherkennung nicht gefallen, kannst du die Sprache hier manuell festlegen.",
-	"InfoDialog_changePassword_title" : "Ändere Passwort",
-	"InfoDialog_changePassword_success" : "Passwort erfolgreich gespeichert!",
+	"InfoDialog_changePassword_title": "Ändere Passwort",
+	"InfoDialog_changePassword_success": "Passwort erfolgreich gespeichert!",
 	"InfoDialog_access_title": "Einstellungsstufe",
 	"InfoDialog_access_text": "Je höher die Stufe je mehr Einstellungen und Funktionen stehen zur Verfügung. Empfohlen ist \"Standard\".",
 	"InfoDialog_nowrite_title": "Fehler beim Schreibzugriff!",
@@ -479,6 +479,9 @@
 	"edt_conf_gen_showOptHelp_expl": "Zeige alle verfügbaren Options-Erklärungen. Empfohlen für Anfänger",
 	"edt_conf_gen_watchedVersionBranch_title": "Ausgewählter Versionszweig",
 	"edt_conf_gen_watchedVersionBranch_expl": "Gibt an, welcher Versionszweig für die Suche von neuen Hyperion Versionen genutzt werden soll.",
+	"edt_conf_gen_instSync_heading_title": "Instanzen Synchronisation",
+	"edt_conf_instSync_compTypes_title": "Von Komponente",
+	"edt_conf_instSync_syncTypes_title": "Sync Typen",
 	"edt_conf_color_heading_title": "Farbkalibrierung",
 	"edt_conf_color_channelAdjustment_header_itemtitle": "Profil",
 	"edt_conf_color_channelAdjustment_header_title": "Anpassung Farbkanäle",
@@ -610,19 +613,19 @@
 	"edt_conf_fw_flat_title": "Liste von Flatbuffer zielen",
 	"edt_conf_fw_flat_expl": "Ein Flatbuffer Ziel pro Zeile. Bestehend aus IP:PORT (Beispiel: 127.0.0.1:19401)",
 	"edt_conf_fw_flat_itemtitle": "Flatbuffer Ziel",
-	"edt_conf_net_heading_title" : "Network",
-	"edt_conf_net_internetAccessAPI_title":"Internet API Zugriff",
-	"edt_conf_net_internetAccessAPI_expl":"Erlaube Zugriff auf die Hyperion API/Webinterface aus dem Internet, deaktivieren für höhere Sicherheit.",
-	"edt_conf_net_ipWhitelist_title":"Erlaubte IP's",
-	"edt_conf_net_ipWhitelist_expl":"Anstatt den Zugriff für alle Verbindungen aus dem Internet zu erlauben kannst du hier Ausnahmen für zugelassene IP Adressen hinzufügen.",
-	"edt_conf_net_ip_itemtitle":"IP",
-	"edt_conf_net_apiAuth_title":"API Authentifizierung",
-	"edt_conf_net_apiAuth_expl":"Zwinge alle Anwendungen welche die Hyperion API nutzen sich zu authentifizieren. Aktivieren für höhere Sicherheit, da nun jede neue Anwendung einmalig von dir bestätigt werden muss.",
-	"edt_conf_net_localApiAuth_title" : "Lokale API Authentifizierung",
-	"edt_conf_net_localApiAuth_expl" : "Wenn aktiviert, müssen Verbindungen aus dem Heimnetzwerk mit einem Token authentifiziert werden.",
-	"edt_conf_net_localAdminAuth_title":"Lokale Admin Authentifizierung",
-	"edt_conf_net_localAdminAuth_expl":"Wenn aktiviert, muss der Administrationszugriff aus dem Heimnetzwerk mit einem Passwort authentifiziert werden.",
-	"edt_conf_net_restirctedInternetAccessAPI_title" : "Auf IP's beschränken",
+	"edt_conf_net_heading_title": "Network",
+	"edt_conf_net_internetAccessAPI_title": "Internet API Zugriff",
+	"edt_conf_net_internetAccessAPI_expl": "Erlaube Zugriff auf die Hyperion API/Webinterface aus dem Internet, deaktivieren für höhere Sicherheit.",
+	"edt_conf_net_ipWhitelist_title": "Erlaubte IP's",
+	"edt_conf_net_ipWhitelist_expl": "Anstatt den Zugriff für alle Verbindungen aus dem Internet zu erlauben kannst du hier Ausnahmen für zugelassene IP Adressen hinzufügen.",
+	"edt_conf_net_ip_itemtitle": "IP",
+	"edt_conf_net_apiAuth_title": "API Authentifizierung",
+	"edt_conf_net_apiAuth_expl": "Zwinge alle Anwendungen welche die Hyperion API nutzen sich zu authentifizieren. Aktivieren für höhere Sicherheit, da nun jede neue Anwendung einmalig von dir bestätigt werden muss.",
+	"edt_conf_net_localApiAuth_title": "Lokale API Authentifizierung",
+	"edt_conf_net_localApiAuth_expl": "Wenn aktiviert, müssen Verbindungen aus dem Heimnetzwerk mit einem Token authentifiziert werden.",
+	"edt_conf_net_localAdminAuth_title": "Lokale Admin Authentifizierung",
+	"edt_conf_net_localAdminAuth_expl": "Wenn aktiviert, muss der Administrationszugriff aus dem Heimnetzwerk mit einem Passwort authentifiziert werden.",
+	"edt_conf_net_restirctedInternetAccessAPI_title": "Auf IP's beschränken",
 	"edt_conf_net_restirctedInternetAccessAPI_expl": "Den Zugriff auf die API durch das Internet auf bestimmte IP's beschränken",
 	"edt_conf_js_heading_title": "JSON Server",
 	"edt_conf_fbs_heading_title": "Flatbuffers Server",
@@ -635,14 +638,14 @@
 	"edt_conf_webc_heading_title": "Web Konfiguration",
 	"edt_conf_webc_docroot_title": "Verzeichnis",
 	"edt_conf_webc_docroot_expl": "Lokaler Pfad zum WebUI Wurzelverzeichnis (Nur für WebUI Entwickler)",
-	"edt_conf_webc_sslport_title" : "HTTPS Port",
-	"edt_conf_webc_sslport_expl" : "Port des HTTPS webservers",
-	"edt_conf_webc_crtPath_title" : "Zertifikats-Pfad",
-	"edt_conf_webc_crtPath_expl" : "Pfad zur Zertifikats-Datei (Format sollte PEM sein)",
-	"edt_conf_webc_keyPath_title" : "Schlüssel-Pfad",
-	"edt_conf_webc_keyPath_expl" : "Pfad zum privaten Schlüssel (Format in PEM, verschlüsselt mit RSA)",
-	"edt_conf_webc_keyPassPhrase_title" : "Schlüsselpasswort",
-	"edt_conf_webc_keyPassPhrase_expl" : "Optional: Der Schlüssel könnte mit einem Passwort geschützt sein",
+	"edt_conf_webc_sslport_title": "HTTPS Port",
+	"edt_conf_webc_sslport_expl": "Port des HTTPS webservers",
+	"edt_conf_webc_crtPath_title": "Zertifikats-Pfad",
+	"edt_conf_webc_crtPath_expl": "Pfad zur Zertifikats-Datei (Format sollte PEM sein)",
+	"edt_conf_webc_keyPath_title": "Schlüssel-Pfad",
+	"edt_conf_webc_keyPath_expl": "Pfad zum privaten Schlüssel (Format in PEM, verschlüsselt mit RSA)",
+	"edt_conf_webc_keyPassPhrase_title": "Schlüsselpasswort",
+	"edt_conf_webc_keyPassPhrase_expl": "Optional: Der Schlüssel könnte mit einem Passwort geschützt sein",
 	"edt_conf_effp_heading_title": "Effekt Pfade",
 	"edt_conf_effp_paths_title": "Effekt Pfad(e)",
 	"edt_conf_effp_paths_expl": "Es können mehrere Ordner definiert werden die Effekte enthalten. Der Effekt Konfigurator speichert immer im Ersten Ordner.",
