updated to match master

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -689,6 +689,9 @@
 	"edt_eff_trails_header_desc" : "Coloured stars that fall from top to bottom",
 	"edt_eff_flag_header" : "Flags",
 	"edt_eff_flag_header_desc" : "Let your leds shine bright in the colours of your country. You can select more than one flag and they will change based on the interval time.",
+	"edt_eff_collision_header": "colour collision",
+	"edt_eff_collision_header_desc": "Two colour projectiles are sent from random positions and collide with each other",
+	"edt_eff_explodeRadius": "Detonation Range ",
 	"edt_eff_enum_all" : "All",
 	"edt_eff_enum_all-together" : "All together",
 	"edt_eff_enum_list" : "LED List",
