--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -165,6 +165,10 @@
 	"conf_leds_layout_cl_edgegap": "Rahmenabstand",
 	"conf_leds_layout_cl_cornergap": "Eckabstand",
 	"conf_leds_layout_cl_overlap": "Überlappung",
+	"conf_leds_layout_ptl": "Punkt Oben Links",
+	"conf_leds_layout_ptr": "Punkt Oben Rechts",
+	"conf_leds_layout_pbl": "Punkt Unten Links",
+	"conf_leds_layout_pbr": "Punkt Unten Rechts",
 	"conf_leds_layout_ma_horiz": "Horizontal",
 	"conf_leds_layout_ma_vert": "Vertikal",
 	"conf_leds_layout_ma_cabling": "Verkabelung",
