CHanges 26.12.2019 Correction and PowerOff add

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -79,6 +79,8 @@
 	"dashboard_message_default_password_t": "WebUi Standardpasswort gesetzt",
 	"dashboard_message_default_password": "Das Standardpasswort der WebUi ist gesetzt. Wir empfehlen dringend, dieses zu ändern.",
 	"dashboard_active_instance": "Ausgewählte Instanz",
+	"dashboard_infobox_label_pltf" : "Plattform",
+	"dashboard_infobox_label_pltfpoweroff" : "Shutdown Poweroff",
 	"main_menu_dashboard_token": "Dashboard",
 	"main_menu_configuration_token": "Konfiguration",
 	"main_menu_general_conf_token": "Allgemein",
@@ -165,10 +167,6 @@
 	"conf_leds_layout_cl_edgegap": "Rahmenabstand",
 	"conf_leds_layout_cl_cornergap": "Eckabstand",
 	"conf_leds_layout_cl_overlap": "Überlappung",
-	"conf_leds_layout_ptl": "Punkt Oben Links",
-	"conf_leds_layout_ptr": "Punkt Oben Rechts",
-	"conf_leds_layout_pbl": "Punkt Unten Links",
-	"conf_leds_layout_pbr": "Punkt Unten Rechts",
 	"conf_leds_layout_ma_horiz": "Horizontal",
 	"conf_leds_layout_ma_vert": "Vertikal",
 	"conf_leds_layout_ma_cabling": "Verkabelung",
@@ -443,7 +441,6 @@
 	"edt_dev_spec_gpioBcm_title": "GPIO Pin",
 	"edt_dev_spec_ledIndex_title": "LED index",
 	"edt_dev_spec_colorComponent_title": "Farbkomponente",
-	"edt_dev_spec_printTimeStamp_title" : "Mit Zeitstempel",
 	"edt_conf_general_enable_title": "Aktiviert",
 	"edt_conf_general_enable_expl": "Wenn aktiviert, ist die Komponente aktiv.",
 	"edt_conf_general_priority_title": "Priorität",
@@ -769,6 +766,8 @@
 	"edt_append_hz": "Hz",
 	"edt_append_pixel": "Pixel",
 	"edt_append_percent": "%",
+	"edt_append_percent_h": "% hori",
+	"edt_append_percent_v": "% vert",
 	"edt_append_degree": "°",
 	"edt_append_sdegree": "s/grad",
 	"edt_append_leds": "LEDs",
@@ -809,5 +808,12 @@
 	"edt_msg_button_delete_row_title": "$1 Löschen",
 	"edt_msg_button_delete_row_title_short": "Löschen",
 	"edt_msg_button_collapse": "Einklappen",
-	"edt_msg_button_expand": "Ausklappen"
+	"edt_msg_button_expand": "Ausklappen",
+	"conf_leds_layout_ptln": "Trapezpunkte",
+	"conf_leds_layout_ptlh": "Horizontal",
+	"conf_leds_layout_ptlv": "Vertikal",
+	"conf_leds_layout_ptl": "Punkt Oben Links",
+	"conf_leds_layout_ptr": "Punkt Oben Rechts",
+	"conf_leds_layout_pbl": "Punkt Unten Links",
+	"conf_leds_layout_pbr": "Punkt Unten Rechts"
 }
