--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -559,6 +559,10 @@
 	"edt_conf_v4l2_sDVOffsetMax_expl": "Signal Erkennungs-Bereich vertikal maximum (0.0-1.0)",
 	"edt_conf_v4l2_sDHOffsetMax_title": "Signal Erkennung HMax",
 	"edt_conf_v4l2_sDHOffsetMax_expl": "Signal Erkennungs-Bereich horizontal maximum (0.0-1.0)",
+	"edt_conf_v4l2_grabberFix_title": "Feste Grabber Werte",
+	"edt_conf_v4l2_gFWidth_title": "Breite",
+	"edt_conf_v4l2_gFHeight_title": "Höhe",
+	"edt_conf_v4l2_gFVType_title": "Pixelformat",
 	"edt_conf_instCapture_heading_title": "Instance Aufnahme",
 	"edt_conf_instC_systemEnable_title": "Aktiviere Plattform Aufnahme",
 	"edt_conf_instC_systemEnable_expl": "Aktiviert die Plattform Aufnahme für diese LED Hardware Instanz",
