--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -183,6 +183,7 @@
 	"conf_grabber_v4l_intro" : "USB capture uses a capture device connected via USB to this system to input source images for processing.",
 	"conf_colors_color_intro" : "Create one or more calibration profiles, adjust each colour, brightness, linearization and more.",
 	"conf_colors_smoothing_intro" : "Smoothing flattens colour/brightness changes to reduce annoying distraction.",
+	"conf_colors_prepro_intro" : "Get a noise-free image with a hint of blur",
 	"conf_colors_blackborder_intro" : "Skip black bars wherever they are. Each mode uses a different detection algorithm which is tuned for special situations. Higher the threshold if it doesn't work for you.",
 	"conf_network_net_intro" : "Network related settings which are applied to all network services.",
 	"conf_network_json_intro" : "The JSON-RPC-Port of all Hyperion instances, used for remote control.",
@@ -527,6 +528,9 @@
 	"edt_conf_smooth_updateDelay_expl" : "Delay the output in case your ambient lights are faster than your TV.",
 	"edt_conf_smooth_continuousOutput_title" : "Continuous output",
 	"edt_conf_smooth_continuousOutput_expl" : "Update the leds even if there is no change in the picture.",
+	"edt_conf_prepro_heading_title": "Image PreProcessing",
+	"edt_conf_prepro_radius_title": "Radius",
+	"edt_conf_prepro_radius_expl": "Specifies the blur radius",
 	"edt_conf_v4l2_heading_title" : "USB Capture",
 	"edt_conf_v4l2_device_title" : "Device",
 	"edt_conf_v4l2_device_expl" : "The path to the USB capture interface. Set to 'auto' for automatic detection. Example: '/dev/video0'",
