--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -184,6 +184,7 @@
 	"conf_grabber_v4l_intro": "USB Aufnahme ist ein Gerät, welches via USB angeschlossen ist und als Bildquelle dient.",
 	"conf_colors_color_intro": "Erstelle Kalibrierungsprofile die einzelnen Komponenten zugewisen werden können. Passe dabei Farben, Gamma, Helligkeit, Kompensation und mehr an.",
 	"conf_colors_smoothing_intro": "Glätte den Farbverlauf und Helligkeitsänderungen um nicht von schnellen Übergängen abgelenkt zu werden.",
+	"conf_colors_prepro_intro": "Erziehle mit einem hauch von Unschärfe ein rauschfreieres Bild.",
 	"conf_colors_blackborder_intro": "Ignoriere schwarze Balken, jeder Modus nutzt einen anderen Algorithmus um diese zu erkennen. Erhöhe die Schwelle, sollte es nicht funktionieren.",
 	"conf_network_net_intro" : "Einstellungen zum Netzwerk die für alle Netzwerk-Dienste gelten",
 	"conf_network_json_intro": "Der JSON-RPC-Port aller Hyperion-Instanzen, wird genutzt zur Fernsteuerung.",
@@ -528,6 +529,9 @@
 	"edt_conf_smooth_updateDelay_expl": "Verzögere die Ausgabe, sollte dein ambient light schneller sein als dein TV.",
 	"edt_conf_smooth_continuousOutput_title": "Fortlaufende Ausgabe",
 	"edt_conf_smooth_continuousOutput_expl": "Aktualisiere die LEDs, auch wenn das Bild sich nicht geändert hat.",
+	"edt_conf_prepro_heading_title": "Bildvorverarbeitung",
+	"edt_conf_prepro_radius_title": "Radius",
+	"edt_conf_prepro_radius_expl": "Gibt den Radius der Unschärfe an",
 	"edt_conf_v4l2_heading_title": "USB Aufnahme",
 	"edt_conf_v4l2_device_title": "Gerät",
 	"edt_conf_v4l2_device_expl": "Der Pfad zum USB (v4l) Aufnahmegerät. Wähle 'auto' für automatische Erkennung. Beispiel: '/dev/video0'",
