refactor: move outputDelay from smoothing to ledDevice

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -388,6 +388,8 @@
 	"edt_dev_general_heading_title" : "General Settings",
 	"edt_dev_general_name_title" : "Configuration name",
 	"edt_dev_general_hardwareLedCount_title" : "Hardware LED count",
+	"edt_dev_general_outputDelay_title" : "Delay output",
+	"edt_dev_general_outputDelay_expl" : "Delay the output in case your ambient lights are faster than your TV.",
 	"edt_dev_general_colorOrder_title" : "RGB byte order",
 	"edt_dev_general_rewriteTime_title" : "Refresh time",
 	"edt_dev_spec_header_title" : "Specific Settings",
@@ -522,8 +524,6 @@
 	"edt_conf_smooth_time_ms_expl" : "How long should the smoothing gather pictures?",
 	"edt_conf_smooth_updateFrequency_title" : "Update frequency",
 	"edt_conf_smooth_updateFrequency_expl" : "The output speed to your led controller.",
-	"edt_conf_smooth_updateDelay_title" : "Update delay",
-	"edt_conf_smooth_updateDelay_expl" : "Delay the output in case your ambient lights are faster than your TV.",
 	"edt_conf_smooth_continuousOutput_title" : "Continuous output",
 	"edt_conf_smooth_continuousOutput_expl" : "Update the leds even if there is no change in the picture.",
 	"edt_conf_v4l2_heading_title" : "USB Capture",
