--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -389,6 +389,8 @@
 	"edt_dev_general_heading_title": "Allgemeine Einstellungen",
 	"edt_dev_general_name_title": "Name der Konfiguration",
 	"edt_dev_general_hardwareLedCount_title": "Anzahl Hardware LEDs",
+	"edt_dev_general_outputDelay_title": "Ausgabeverzögerung",
+	"edt_dev_general_outputDelay_expl": "Verzögere die Ausgabe, sollte dein ambient light schneller sein als dein TV.",
 	"edt_dev_general_colorOrder_title": "RGB Byte Reihenfolge",
 	"edt_dev_general_rewriteTime_title": "Aktualisierungszeit",
 	"edt_dev_spec_header_title": "Spezifische Einstellungen",
@@ -523,8 +525,6 @@
 	"edt_conf_smooth_time_ms_expl": "Wie lange soll die Glättung Bilder sammeln?",
 	"edt_conf_smooth_updateFrequency_title": "Aktualisierungsfrequenz",
 	"edt_conf_smooth_updateFrequency_expl": "Die Geschwindigkeit der Datenausgabe an die LED Steuerung.",
-	"edt_conf_smooth_updateDelay_title": "Aktualisierungsverzögerung",
-	"edt_conf_smooth_updateDelay_expl": "Verzögere die Ausgabe, sollte dein ambient light schneller sein als dein TV.",
 	"edt_conf_smooth_continuousOutput_title": "Fortlaufende Ausgabe",
 	"edt_conf_smooth_continuousOutput_expl": "Aktualisiere die LEDs, auch wenn das Bild sich nicht geändert hat.",
 	"edt_conf_v4l2_heading_title": "USB Aufnahme",
