Changed WebUI Version Check to SemVer. Also addes "Alpha" Channel

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -55,7 +55,7 @@
 	"dashboard_infobox_label_instance": "Instanz:",
 	"dashboard_infobox_label_ports": "Ports (flat|proto):",
 	"dashboard_infobox_label_watchedversionbranch": "Ausgewählter Versionszweig:",
-	"dashboard_infobox_message_updatewarning": "Eine aktuellere Version von Hyperion ist verfügbar! (V$1)",
+	"dashboard_infobox_message_updatewarning": "Eine aktuellere Version von Hyperion ist verfügbar! ($1)",
 	"dashboard_infobox_message_updatesuccess": "Du nutzt die aktuellste Version von Hyperion.",
 	"dashboard_infobox_label_statush": "Hyperion Status:",
 	"dashboard_infobox_label_smartacc": "Schnellzugriff",
@@ -284,6 +284,7 @@
 	"update_label_type": "Art:",
 	"update_versreminder": "Deine Version: $1",
 	"update_error_getting_versions": "Wir hatten Probleme die verfügbaren Versionen zu ermitteln.",
+	"update_no_updates_for_branch": "Keine Updates für ausgewählten Channel verfügbar.",
 	"about_version": "Version",
 	"about_build": "Build",
 	"about_builddate": "Build Datum",
