--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -12,6 +12,7 @@
 	"general_speech_es": "Spanisch",
 	"general_speech_it": "Italienisch",
 	"general_speech_cs": "Tschechisch",
+	"general_speech_sv" : "Schwedisch",
 	"general_access_default": "Standard",
 	"general_access_advanced": "Fortgeschritten",
 	"general_access_expert": "Experte",
