--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -12,6 +12,7 @@
 	"general_speech_es" : "Spanish",
 	"general_speech_it" : "Italian",
 	"general_speech_cs" : "Czech",
+	"general_speech_sv" : "Swedish",
 	"general_access_default" : "Default",
 	"general_access_advanced" : "Advanced",
 	"general_access_expert" : "Expert",
