New language from POEditor: Dutch, Polish, Romanian
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -13,6 +13,9 @@
 	"general_speech_it": "Italienisch",
 	"general_speech_cs": "Tschechisch",
 	"general_speech_sv" : "Schwedisch",
+	"general_speech_nl" : "Niederländisch",
+	"general_speech_pl" : "Polnisch",
+	"general_speech_ro" : "Rumänisch",
 	"general_access_default": "Standard",
 	"general_access_advanced": "Fortgeschritten",
 	"general_access_expert": "Experte",
