--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -13,6 +13,9 @@
 	"general_speech_it" : "Italian",
 	"general_speech_cs" : "Czech",
 	"general_speech_sv" : "Swedish",
+	"general_speech_nl" : "Dutch",
+	"general_speech_pl" : "Polish",
+	"general_speech_ro" : "Romanian",
 	"general_access_default" : "Default",
 	"general_access_advanced" : "Advanced",
 	"general_access_expert" : "Expert",
