--- a/assets/webconfig/i18n/sv.json
+++ b/assets/webconfig/i18n/sv.json
@@ -807,6 +807,9 @@
     "edt_dev_spec_printTimeStamp_title": "Lägg till tidsstämpel",
     "edt_eff_ledtest_header": "LED-test",
     "edt_eff_ledtest_header_desc": "Roterande utgång: röd, blå, grön, vit, svart",
-    "update_no_updates_for_branch": "",
-    "general_speech_sv": ""
+    "update_no_updates_for_branch": "Inga uppdateringar för vald versionskanal.",
+    "general_speech_sv": "Svenska",
+    "general_speech_nl": "Holländska",
+    "general_speech_pl": "Polska",
+    "general_speech_ro": "Rumänska"
 }
