refactor: Align Phillips Hue to reworked device handling (#712)
* Align PhilipsHue (Classic)

* Minor Device corrections

* Have code working with Qt < 5.10

* Fixes on Hue Wizzard

* Fixes on Hue Wizzard

* Calculate Latchtime only for lights updated by hyperion

* Allow to disable restoring original light's state

* Fix - LightIDs / LightMap vectors were not cleared when reopening the device

* Reduce API Calls for state updates by consolidation

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -426,6 +426,7 @@
 	"edt_dev_spec_transistionTime_title": "Übergangszeit",
 	"edt_dev_spec_switchOffOnBlack_title": "Aus bei schwarz",
 	"edt_dev_spec_brightnessFactor_title": "Helligkeitsfaktor",
+	"edt_dev_spec_restoreOriginalState_title" : "Lampen Originalzustand wiederhestellen",
 	"edt_dev_spec_ledType_title": "LED typ",
 	"edt_dev_spec_uid_title": "UID",
 	"edt_dev_spec_intervall_title": "Intervall",
