bugfixes, reworked black signal detection, wizard: - change device config field light-ids from int to string -> real unsigned int fix - add signal detection brightness minimum threshold value 0.0 for 0% brightness - 1.0 for 100% brightness to count for blacklight signal detection reason: input may not 100% black, like mine - i have a deep dark gray input signal -> my threshold value is set to 0.005 for 0.5% minimum brightness = 1 (from max 255) to count as black - wizard optimations, with fallback without entertainment support (beta state) - whitespace fixes

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -381,7 +381,7 @@
 	"wiz_hue_ident": "Identifiziere",
 	"wiz_hue_e_create_user": "Neuen Benutzer und Clientkey erstellen",
 	"wiz_hue_e_use_groupid": "Gruppen ID $1 verwenden",
-	"wiz_hue_e_noegrpids": "Diese Hue Bridge hat keine definierten Entertainment Gruppen",
+	"wiz_hue_e_noegrpids": "Diese Hue Bridge hat keine definierten Entertainment Gruppen. Der Assistent hat die Entertainment Unterstützung deaktiviert.",
 	"wiz_hue_e_nogrpids": "Diese Hue Bridge hat keine definierten Gruppen, bitte erstelle zuvor wenigstens eine in der Hue App",
 	"wiz_hue_e_title": "Philips Hue Entertainment Assistent",
 	"wiz_hue_e_intro1": "Dieser Assistent hilft dir bei der Konfiguration von Hyperion für Philips Hue Entertainment. Zu den Funktionen zählen ein automatisches finden der Hue Bridge, einen neuen Benutzer und dazugehörigen Clientkey zum verwenden der Entertainment API erstellen, eine Entertainment Gruppenauswahl und die zur Gruppe gehörenden Lampen unterschiedlichen Bereichen im Bild zuzuordnen, sowie weitere Einstellungen von Hyperion automatisch anzupassen. Kurz gesagt: Komplette Einrichtung mit ein paar Klicks.",
@@ -446,6 +446,7 @@
 	"edt_dev_spec_lightid_itemtitle": "ID",
 	"edt_dev_spec_transistionTime_title": "Übergangszeit",
 	"edt_dev_spec_blackLightsTimeout_title": "Signal Erkennung Timeout bei schwarz",
+	"edt_dev_spec_brightnessThreshold_title": "Signal Erkennung Helligkeitsminimum",
 	"edt_dev_spec_switchOffOnBlack_title": "Aus bei schwarz",
 	"edt_dev_spec_brightnessFactor_title": "Helligkeitsfaktor",
 	"edt_dev_spec_brightnessMin_title": "Helligkeit minimum",
