--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -380,7 +380,7 @@
 	"wiz_hue_ident" : "Identify",
 	"wiz_hue_e_create_user" : "Create new User and clientkey",
 	"wiz_hue_e_use_groupid": "Use group ID $1",
-	"wiz_hue_e_noegrpids": "This Hue bridge has no entertainment groups defined",
+	"wiz_hue_e_noegrpids": "This Hue bridge has no entertainment groups defined. Wizard has disabled entertainment support",
 	"wiz_hue_e_nogrpids": "This Hue bridge has no groups defined, please create at least one before with the Hue Apps",
 	"wiz_hue_e_title" : "Philips Hue Entertainment Wizard",
 	"wiz_hue_e_intro1" : "This wizards configures Hyperion for the well known Philips Hue Entertainment system. Features are Hue Bridge auto detection, user and clientkey creation, entertainment group selection and set group lights to a specific position on your picture and tune the Hyperion settings automatically! So in short: All you need are some clicks and you are done!",
@@ -445,6 +445,7 @@
 	"edt_dev_spec_lightid_itemtitle" : "ID",
 	"edt_dev_spec_transistionTime_title" : "Transition time",
 	"edt_dev_spec_blackLightsTimeout_title": "Signal detection timeout on black",
+	"edt_dev_spec_brightnessThreshold_title": "Signal detection brightness minimum",
 	"edt_dev_spec_switchOffOnBlack_title" : "Switch off on black",
 	"edt_dev_spec_brightnessFactor_title" : "Brightness factor",
 	"edt_dev_spec_brightnessMin_title": "Brightness minimum",
